--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,46 @@
 .App {
   text-align: center;
+  background: linear-gradient(180deg, #60a85f, #88e23b); 
+  min-height: 100vh;
+  padding: 20px 0;
+  font-family: 'Arial', sans-serif;
+}
+
+h1 {
+  padding-bottom: 20px; 
+  color: #043c63; 
+  font-size: 3em;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4); 
 }
 
 .filters {
-  margin-bottom: 20px;
+  margin-bottom: 30px; 
+  display: flex;
+  justify-content: center;
+  gap: 20px; 
 }
 
 .filters label {
   margin: 0 10px;
+  font-size: 1.1em;
+  color: #043c63; 
+}
+
+.filter-select,
+.sort-select {
+  padding: 8px 12px;
+  font-size: 14px;
+  border-radius: 4px;
+  border: 1px solid #043c63;
+  background-color: #a6cccc; 
+  color: #043c63; 
+  transition: border 0.3s ease-in-out;
+}
+
+.filter-select:focus,
+.sort-select:focus {
+  border-color: #ebe480; 
+  outline: none;
 }
 
 .character-list {
@@ -18,11 +51,18 @@
 }
 
 .character-card {
-  width: 200px;
+  width: 220px;
   text-align: center;
-  border: 1px solid #ccc;
-  padding: 10px;
+  border: 1px solid #88e23b; 
+  padding: 15px;
   border-radius: 8px;
+  background-color: #ebe480; 
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2); 
+  transition: transform 0.2s ease-in-out;
+}
+
+.character-card:hover {
+  transform: scale(1.05); 
 }
 
 .character-card img {
@@ -31,9 +71,11 @@
   border-radius: 8px;
 }
 
+
 h2 {
   font-size: 18px;
   margin-top: 10px;
+  color: #043c63; 
 }
 
 .pagination {
@@ -44,12 +86,22 @@ h2 {
   padding: 5px 10px;
   margin: 0 5px;
   cursor: pointer;
+  background-color: #60a85f; 
+  color: white;
+  border: none;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.pagination button:hover {
+  background-color: #043c63;
 }
 
 .pagination button:disabled {
   cursor: not-allowed;
   opacity: 0.5;
 }
+
 
 footer {
   position: fixed;
@@ -58,17 +110,24 @@ footer {
   z-index: 1000; 
 }
 
+
 .language-button {
-  padding: 10px 15px;
-  font-size: 14px;
-  background-color: #007bff;
-  color: white;
+  padding: 12px 18px;
+  font-size: 16px;
+  background-color: #007bff; 
+  color: white; 
   border: none;
   border-radius: 5px;
   cursor: pointer;
   position: relative; 
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2); 
+  transition: background-color 0.3s ease, transform 0.2s ease;
 }
 
+.language-button:hover {
+  background-color: #0056b3; 
+  transform: scale(1.05); 
+}
 
 .language-dropdown {
   position: absolute;
@@ -95,14 +154,25 @@ footer {
   background-color: #f1f1f1;
 }
 
-.language-dropdown li {
-  margin: 0;
-  padding: 10px 0;
+.sort {
+  margin-left: 20px; 
+}
+
+.filters select,
+.sort select {
+  margin-left: 10px;
+  padding: 8px;
+  font-size: 14px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  background-color: #f9f9f9;
   cursor: pointer;
+  transition: background-color 0.3s ease, border 0.3s ease;
 }
 
-.language-dropdown li:hover {
-  background-color: #eee;
+.filters select:hover,
+.sort select:hover {
+  background-color: #f1f1f1;
+  border-color: #ebe480; 
 }
-
 
